# FBG_Hybrid_Modeling

./: CMakeLists.txt  README.md  package.xml
HSV_Value/: maskImg1  maskImg2
include/fbg_hybrid_modeling/: mtsTaskFBGInterrogator.h
launch/: testMotorLaunch.launch  testmtsTaskFBGInterrogator.launch
scripts/: FBGInterrogatorROSNodeClass.py  RosNodeClass.py  getImage.py  maxonMotorROSNodeClass.py  setHSVFilter.py  setStereoVideoCaptureProperties.py  stereoCameraAccuracyMeasurment.py  stereoCameraCalibration.py  stereoCameraDataProcessing.py  stereoVisionClass.py  testMotor.py  testScriptLiveStreaming.py  threadingBarrierEvent.py
src/: mtsTaskFBGInterrogator.cpp  testmtsTaskFBGInterrogator.cpp  testmtsTaskMaxonMotor.cpp
stereoCameraCalibration/: estimationErrors.mat  stereoParams.mat
video_Capture_Properties/: videoCapturePropertiesCam1  videoCapturePropertiesCam2
